Bug 569328 - [16] Promote the relevant features from preview to standard
Change-Id: Id510d22e00be4ebbc3f4fadbba6a7b0fecbc2f34
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>